--- a/pgproxy.conf
+++ b/pgproxy.conf
@@ -2,16 +2,17 @@
 
 # 默认服务配置
 [ServerConfig]
-    ProxyAddr = "127.0.0.1:9090"                               		#proxy服务地址，接受数据库连接
+    ProxyAddr = "127.0.0.1:9090"                               		# proxy服务地址，接受数据库连接
 
-# 默认服务配置
+# 默认数据库配置
 # master 为默认主数据库，slave[N]为从数据库
 [DB]
     [DB.master]                                               	    # 需要代理的pg数据库名称
         Addr = "127.0.0.1:5432"                                     # 数据库地址
         User = "postgres"                                           # 数据库用户名
-        Password = ""                           			# 数据库密码
-        DbName = "db"                                           # 数据库名称
+        Password = ""                           			        # 数据库密码
+        DbName = "db"                                               # 数据库名称
+        Mode = "all"
 
    	[DB.slave1]                                               			
         Addr = "127.0.0.1:5433"                                   
