add stop and log dir

--- a/pgproxy.conf
+++ b/pgproxy.conf
@@ -10,9 +10,8 @@
     [DB.master]                                               	    # 需要代理的pg数据库名称
         Addr = "127.0.0.1:5432"                                     # 数据库地址
         User = "postgres"                                           # 数据库用户名
-        Password = ""                           			        # 数据库密码
-        DbName = "db"                                               # 数据库名称
-        Mode = "all"
+        Password = "postgres"                           			# 数据库密码
+        DbName = "db"                                           # 数据库名称
 
    	[DB.slave1]                                               			
         Addr = "127.0.0.1:5433"                                   
